fixed z-index of scroll-to-top button

--- a/src/components/scroll-top-button/ScrollToTopButton.scss
+++ b/src/components/scroll-top-button/ScrollToTopButton.scss
@@ -11,6 +11,7 @@
   border-radius: 50%;
   cursor: pointer;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 2;
 
   @media (max-width: $small-display) {
     height: 60px;
